--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,10 +1,7 @@
-// colors
-
 $body-color      :#00b4d8;
 $body-font-color : #ffff;
 $links-color     :$body-font-color;
 
-//fonts 
 $body-font:'Source Sans Pro',
 sans-serif;
 $body-font-size: 18px;
@@ -18,10 +15,8 @@ $text-font-size: 22px;
 }
 
 body {
-    max-width       : 1440px;
     width           : 100%;
-    max-height      : 810px;
-    height          : 100%;
+    height          : 100vh;
     margin          : auto;
     background-color: $body-color;
 }
@@ -33,10 +28,10 @@ nav {
     margin-top     : 30px;
 
     .logo {
-        font-family    : 'Baloo 2', cursive;
-        font-size      : 40px;
-        font-weight    : bold;
-        text-decoration: underline;
+        font-family: 'Baloo 2', cursive;
+        font-size  : 55px;
+        font-weight: bold;
+        color      : #fdf0d5;
     }
 
     .menu-bar {
@@ -45,7 +40,7 @@ nav {
             display  : none;
             cursor   : pointer;
             font-size: 22px;
-            color    : #ffffff;
+            color    : $body-font-color;
         }
 
     }
@@ -72,11 +67,11 @@ nav {
         cursor         : pointer;
 
         &:hover {
-            color: #fee440;
+            color: #16697a;
         }
 
-        &.active {
-            color: #5c374c;
+        &:active {
+            color: #0ab155;
         }
     }
 }
@@ -128,4 +123,36 @@ nav {
             left: 0%;
         }
     }
+}
+
+.sect-one {
+    display              : grid;
+    grid-template-columns: 10% 5% 40% 40%;
+    grid-template-rows   : 15% 2% 50% 5% 15%;
+
+    img {
+        width : 90%;
+        height: auto;
+
+        &:hover {
+            opacity: 0.8;
+            cursor: pointer;
+    
+        }
+    }
+    .img-one {
+        grid-area: 3 / 2 / 4 / 4;
+    }
+    .img-two {
+        grid-area: 2 / 4 / 3 / 5;
+
+    }
+    p {
+
+        grid-area  : 5 / 3 / 6 / 5;
+        width: 90%;
+        font-size  : 20px;
+        line-height: 26px;
+        text-align : center;
+    } 
 }
