--- a/styles/main.scss
+++ b/styles/main.scss
@@ -67,7 +67,7 @@ nav {
         cursor         : pointer;
 
         &:hover {
-            color: #16697a;
+            color: #f72585;
         }
 
         &:active {
